# demo_opencl

./: README.md  opencl笔记备忘.md
00.00.opencl.env/: CMakeLists.txt  main.cpp
00.00.opencl.flow/: kernel_helloworld.cl  main.cpp  tool.cpp  tool.h
