# author: pingo
CMAKE_MINIMUM_REQUIRED(VERSION 3.10.0)
PROJECT(demo VERSION 0.1)

### Script
FILE(GLOB CURR_HDR ./*.h)
FILE(GLOB CURR_SRC ./*.cpp)
SOURCE_GROUP("Headers" FILES ${CURR_HDR})
SOURCE_GROUP("Sources" FILES ${CURR_SRC})
SET(CURR_ALL ${CURR_HDR} ${CURR_SRC})

### package: OpenCL 
FIND_PACKAGE(OpenCL REQUIRED)
INCLUDE_DIRECTORIES(${OpenCL_INCLUDE_DIRS})
LINK_LIBRARIES(${OpenCL_LIBRARIES})
MESSAGE(STATUS "include: ${OpenCL_INCLUDE_DIRS}")
MESSAGE(STATUS "library: ${OpenCL_LIBRARIES}")

### target
ADD_EXECUTABLE(demo ${CURR_ALL})

